--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start": "npm-run-all --parallel devserver watch:sass",
 		"compile:sass": "node-sass sass/main.scss css/style.comp.css",
 		"prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-		"compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+		"compress:css": "node-sass css/style.prefix.css css/main.css --output-style compressed",
 		"build:css": "npm-run-all compile:sass prefix:css compress:css"
 	},
 	"repository": {
@@ -28,6 +28,8 @@
 		"node-sass": "^7.0.1",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.7",
-		"postcss-cli": "^9.1.0"
-	}
+		"postcss-cli": "^9.1.0",
+		"smoothscroll-polyfill": "^0.4.4"
+	},
+	"dependencies": {}
 }
